// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Volume creates categories index 1`] = `
Object {
  "alphaBeta": true,
  "fooBar": true,
}
`;

exports[`Volume returns all volumes 1`] = `
Array [
  Object {
    "authors": Array [
      "Author Name",
    ],
    "id": 1,
    "image": "/e.jpg",
    "subtitle": "B",
    "title": "Volume 1",
  },
  Object {
    "authors": Array [
      "Author Name",
    ],
    "id": 2,
    "image": undefined,
    "subtitle": undefined,
    "title": "Volume 2",
  },
]
`;

exports[`Volume returns subset of volume attributes 1`] = `
Object {
  "authors": Array [
    "C",
    "D",
  ],
  "id": 1,
  "image": "/e.jpg",
  "subtitle": "B",
  "title": "A",
}
`;
